--- a/vignettes/BSTZINB_vignette.Rmd
+++ b/vignettes/BSTZINB_vignette.Rmd
@@ -5,6 +5,7 @@ vignette: >
   %\VignetteIndexEntry{BSTZINB_vignette}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteDepends{CorrMixed, ape}
 ---
 
 ```{r, include = FALSE, warning=FALSE, message=FALSE}
