updated from Yoon-Bae

--- a/vignettes/BSTZINB_vignette.Rmd
+++ b/vignettes/BSTZINB_vignette.Rmd
@@ -208,24 +208,31 @@ USDmapCount(state.sel = c("IA"),
 ```
 
 
-Now, we shall apply the different models on this data. We'll start by fitting the Bayesian Spatiotemporal Poisson (BSTP) model using the function `BSTP`:
+Now, we shall apply the different models on this data. We'll start by fitting the Bayesian Spatiotemporal Poisson (BSTP) model using the functions `BNB` and `BZINB`:
 
 ```{r}
-res1 = BSTP(y, X, A, nt=24, nchain=3, nsim=100, nburn=50)
+res0 = BNB(y, X, A, nchain=3, niter=100, nburn=20)
+glimpse(res0)
+
+res1 = BZINB(y, X, A, nchain=3, niter=100, nburn=20)
 glimpse(res1)
+
+
+apply(res0$Beta,2,mean)
+apply(res1$Beta,2,mean)
 ```
 
 Next will be the Bayesian Spatiotemporal Negative Binomial (BSTNB) model using the function `BSTNB`:
 
 ```{r}
-res2 = BSTNB(y, X, A, nt=24, nchain=3, nsim=100, nburn=50)
+res2 = BSTNB(y, X, A, nchain=3, niter=100, nburn=20)
 glimpse(res2)
 ```
 
 Followed by a Bayesian Spatiotemporal Zero Inflated Negative Binomial (BSTZINB) model with linear temporal trend using the `BSTZINB` function with option `LinearT` set to `TRUE`. We can check the convergence of different parameters for this model using the `conv.test` function supplied with the package. DIC can also be computed using the supplied `compute_ZINB_DIC` function.
 
 ```{r,fig.width=6,fig.height=3,fig.align='center'}
-res3 = BSTZINB(y, X, A, nt=24, LinearT=TRUE, nchain=3, nsim=100, nburn=50, nthin=1)
+res3 = BSTZINB(y, X, A, LinearT=TRUE, nchain=3, niter=100, nburn=20, nthin=1)
 glimpse(res3)
 
 
@@ -249,7 +256,7 @@ compute_ZINB_DIC(y,res3,dim(res3$Beta)[1],3)
 And, another BSTZINB model but with spline fitted non-linear temporal trend is fitted below by switching the `LinearT` to `FALSE`. Corresponding convergence tests, plots and DIC computation are also presented. We can compare the two DICs to pick the best fit model.
 
 ```{r,fig.width=6,fig.height=3,fig.align='center'}
-res4 = BSTZINB(y, X, A, nt=24, LinearT=FALSE, nchain=3, nsim=100, nburn=50)
+res4 = BSTZINB(y, X, A, LinearT=FALSE, nchain=3, niter=100, nburn=20)
 glimpse(res4)
 
 ## Convergence tests
@@ -277,7 +284,7 @@ ResultTableSummary(res3)
 A more detailed summary can be obtained by using the function `ResultTableSummary2`. This functions takes the data (`y`, `X`, `A`, `nt`) as input, runs all of the above 4 models, computes DICs and checks convergences, and finally summarizes them:
 
 ```{r}
-ResultTableSummary2(y, X, A, nt=24, nchain=3, nsim=100, nburn=50, nthin=1)
+ResultTableSummary2(y, X, A, nchain=3, niter=100, nburn=20, nthin=1)
 ```
 
 Next, we'll focus on the outputs of these models and visualizing them. First, we'll visualize a time-averaged Eta parameter in the following way:
@@ -349,11 +356,11 @@ USDmapCount(state.sel = c("IA"),
 Further summarization of the output can be done by plotting the probabilities of the top few counties by quantiles and by numbers using `qRankPar` and `qRankParTop` functions:
 ```{r}
 # Bar Plot of vn-quantile Probability at Risk of disease
-qRankPar(state.set=c("IA"),ns=nrow(A),nt=24,cname=countyname,stfit=res3,vn=12,
+qRankPar(state.set=c("IA"),cname=countyname,bstfit=res3,vn=12,
          cex.title=18, cex.lab=12, cex.legend=12)
 
 # Bar Plot of Top vn number of Probability at Risk of disease
-qRankParTop(state.set=c("IA"),ns=nrow(A),nt=24,cname=countyname,stfit=res3,vn=12,
+qRankParTop(state.set=c("IA"),cname=countyname,bstfit=res3,vn=12,
             cex.title=18, cex.lab=12, cex.legend=12)
 ```
 
@@ -361,11 +368,11 @@ The non-linear time effect for abundance for BSTZINB outputs (non-smoothed and s
 
 ```{r}
 # Line Plot of Nonlinear Time effect abundance
-TimetrendCurve(res4,ncol(A),nt=24,countyname,vn=3,smooth.mode=FALSE,
+TimetrendCurve(res4,cname=countyname,vn=3,smooth.mode=FALSE,
                cex.title=18, cex.lab=12, cex.legend=12)
 
 # Line Plot of Nonlinear Time effect abundance (smoothed version)
-TimetrendCurve(res3,ncol(A),nt=24,countyname,vn=5,smooth.mode=TRUE,
+TimetrendCurve(res3,cname=countyname,vn=5,smooth.mode=TRUE,
                cex.title=18, cex.lab=12, cex.legend=12)
 ```
 
